<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LS_main_R_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:forceDarkAllowed="false"
    tools:context=".Screen.Activity.Login_Screen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/login_book" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/login_bar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top"
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:fontFamily="@font/raleway_bold"
                            android:gravity="center"
                            android:text="@string/welcome_to_the_portal"
                            android:textColor="@color/hardcord_text_color"
                            android:textSize="@dimen/_18sdp" />

                        <EditText
                            android:id="@+id/edtxtUsername"
                            android:layout_width="@dimen/_230sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/edit_text_background"
                            android:gravity="center"
                            android:focusableInTouchMode="true"
                            android:hint="@string/username"
                            android:screenReaderFocusable="true"
                            android:inputType="textPersonName"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/hardcord_text_color" />

                        <EditText
                            android:id="@+id/edtxtPassword"
                            android:layout_width="@dimen/_230sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/edit_text_background"
                            android:gravity="center"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/hardcord_text_color" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="@dimen/_230sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:background="@drawable/button_background"
                            android:fontFamily="@font/lato_regular"
                            android:onClick="ClickToLogin"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="@dimen/_230sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_10sdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_margin="@dimen/_2sdp"
                                android:fontFamily="@font/lato_regular"
                                android:onClick="MoveToResetPassword"
                                android:text="@string/forgot_password"
                                android:textColor="@color/hardcord_text_color"
                                android:textSize="@dimen/_14sdp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_margin="@dimen/_2sdp"
                                android:fontFamily="@font/lato_regular"
                                android:onClick="MoveToChangeLanguage"
                                android:text="@string/language"
                                android:textColor="@color/hardcord_text_color"
                                android:textSize="@dimen/_14sdp" />
                        </RelativeLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>