<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    tools:context=".Screen.Fragment.FinalExamFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/main_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/final_exam"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_120sdp"
        android:background="@drawable/inside_background_white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_4sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="#DCDCDC"
            app:cardCornerRadius="@dimen/_3sdp" />

        <TextView
            android:id="@+id/txvwQuizlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/quiz_level"
            android:textColor="@color/main_hardcord_text_color"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/JtxtvwQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvwQuizlevel"
            android:layout_margin="@dimen/_10sdp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleAnswers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layoutButton"
            android:layout_below="@+id/JtxtvwQuestion"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            tools:listitem="@layout/itemview_training" />

        <LinearLayout
            android:id="@+id/layoutButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/prev"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/lato_regular"
                android:text="@string/previous"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/lato_regular"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>