<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:forceDarkAllowed="false"
    tools:context=".Screen.Fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/HF_RL_TOP"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/main_background" />

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_250sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/student_illustration" />

                    <TextView
                        android:id="@+id/txvwName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/welcome"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25sdp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <TextView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/start_learning_nnew_stuff"
                        android:textColor="@color/main_hardcord_text_color"
                        android:textSize="@dimen/_18sdp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:src="@drawable/student_sleepy" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/HF_RL_TOP"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/trainings_in_progress"
                    android:textColor="@color/main_hardcord_text_color"
                    android:textSize="@dimen/_16sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleTrainig"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layoutAnimation="@anim/layout_animation_fall_down"
                    tools:listitem="@layout/itemview_training" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>